# mine

./: .eslintignore  .gitignore  build.js  eslint.config.mjs  index.css  index.html  index.js  main.js  package.json  preload.js  tsconfig.json  vite.config.mjs  vite.config.ts
js/: index.js
js/mine/: index.css  index.html
js/mine/resources/: icon.icns
js/tet/: index.js  style.css
js/tetris/: index.html  index.js
minesweeper/: package.json
minesweeper/src/: index.css  index.ts  type.d.ts
minesweeper/src-tauri/: Cargo.toml  tauri.conf.json
src/: index.html  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
